--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "native-base": "^3.3.5",
     "react": "17.0.2",
     "react-native": "0.67.2",
+    "react-native-navigation": "^7.25.4",
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "^3.1.9",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^12.1.0"
   },
   "devDependencies": {
